# funesterie

./: .gitattributes  .gitignore  .gitmodules  README.md  bootstrap.bat  bootstrap.ps1  deploy-a11-prod.bat  deploy-a11-prod.ps1  funesterie.code-workspace  push-all.bat  push-all.ps1
a11/: MONOREPO_TRANSITION.md  TREE_MAP.md  WORKSPACE_BOUNDARIES.md  package.json
a11/a11desktoptauri/: .gitignore  README.md  desktop.config.json  index.html  package-lock.json  package.json
a11/a11desktoptauri/scripts/: build-installer-lite.ps1  build-portable-package.ps1  reset-installed-desktop.ps1  sync-local-package.ps1  tauri.ps1
a11/a11desktoptauri/src/: main.ts  styles.css
a11/a11desktoptauri/src-tauri/: Cargo.toml  tauri.conf.json
a11/a11desktoptauri/src-tauri/capabilities/: default.json
a11/a11desktoptauri/src-tauri/src/: lib.rs  main.rs
a11/launchers/: LLM_DOWNLOAD_LINKS.md  README.md  a11-desktop.bat  a11-desktop.ps1  a11-local.ps1  check-all-a11.bat  clean-logs.ps1  start-all-a11.bat  start-all-a11.ps1  start-cerbere-cloudflare-tunnel.bat  start-cerbere-cloudflare-tunnel.ps1  start-cloudflare-tunnel.bat  start-cloudflare-tunnel.ps1  start-prod-a11.bat  start-prod-a11.ps1  status-all-a11.ps1
a11/launchers/config/: a11-local.env  cloudflared-cerbere.yml  remote-providers.json
