[package]
name = "a11_local_desktop"
version = "0.1.0"
description = "A11 local desktop shell"
authors = ["Funesterie"]
edition = "2021"

[lib]
name = "a11_local_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
url = "2"
